hphp/hack/test/typecheck/trait_require_param4.php.exp
File "trait_require_param4.php", line 15, characters 7-8:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "trait_require_param4.php", line 10, characters 25-29:
  Expected `float`
  File "trait_require_param4.php", line 10, characters 25-29:
  This type argument to `Super` must match exactly (it is invariant)
  File "trait_require_param4.php", line 13, characters 23-25:
  But got `int`
